==> FujiHeatPump/esphome-fujitsu/components/fujitsu_heat_pump/FujiHeatPump.cpp <==
#include "FujiHeatPump.h"
#include "esp_log.h"
#include "string.h"

void FujiHeatPump::connect(uart_port_t uart_port, bool secondary, int rxPin, int txPin) {
    ESP_LOGD("FujitsuClimate", "Connect has been entered!");
    int rc;
    uart_config_t uart_config = {
        .baud_rate = 500,
        .data_bits = UART_DATA_8_BITS,
        .parity    = UART_PARITY_EVEN,
        .stop_bits = UART_STOP_BITS_1,
        .flow_ctrl = UART_HW_FLOWCTRL_DISABLE,
        .source_clk = UART_SCLK_APB,
    };
    if (uart_is_driver_installed(uart_port)) {
        ESP_LOGW(TAG, "uninstalling uart driver...");
        rc = uart_driver_delete(uart_port);
        if (rc != 0) {
            ESP_LOGW(TAG, "Failed to uninstall existing uart driver");
            return;
        }
    }
    rc = uart_driver_install(uart_port, 2048, 2048, 20, &this->uart_queue, 0);
    if (rc != 0) {
        ESP_LOGW(TAG, "Failed to install uart driver");
        return;
    }
    rc = uart_param_config(uart_port, &uart_config);
    if (rc != 0) {
        ESP_LOGW(TAG, "Failed to configure uart params");
        return;
    }
    rc = uart_set_pin(uart_port, txPin /* TXD */,  rxPin /* RXD */, UART_PIN_NO_CHANGE /* RTS */, UART_PIN_NO_CHANGE /* CTS */);
    if (rc != 0) {
        ESP_LOGW(TAG, "Failed to set uart pins");
        return;
    }

    rc = uart_set_mode(uart_port, UART_MODE_RS485_HALF_DUPLEX);
    if (rc != 0) {
        ESP_LOGW(TAG, "Failed to set uart to half duplex");
        return;
    }
    ESP_LOGD(TAG, "Serial port configured");

    if (secondary) {
        controllerIsPrimary = false;
        controllerAddress = static_cast<byte>(FujiAddress::SECONDARY);
        ESP_LOGI(TAG, "Controller in secondary mode");
    } else {
        controllerIsPrimary = true;
        controllerAddress = static_cast<byte>(FujiAddress::PRIMARY);
        ESP_LOGI(TAG, "Controller in primary mode");
    }

    this->uart_port = uart_port;
    //rc = xTaskCreatePinnedToCore(heat_pump_uart_event_task, "FujiTask", 4096, (void *)this,
    //        // TODO is the priority reasonable? find & investigate the freertosconfig.h
    //                        configMAX_PRIORITIES - 1, NULL /* ignore the task handle */, 1);
    rc = xTaskCreate(heat_pump_uart_event_task, "FujiTask", 4096, (void *)this,
                            12, NULL /* ignore the task handle */);
    if (rc != 0) {
        ESP_LOGW(TAG, "Failed to create heat pump event task");
        return;
    }
}

void FujiHeatPump::printFrame(byte buf[8], FujiFrame ff) {
    ESP_LOGD(TAG, "%X %X %X %X %X %X %X %X  ", buf[0], buf[1], buf[2],
             buf[3], buf[4], buf[5], buf[6], buf[7]);
    ESP_LOGD(
        TAG,
        " mSrc: %d mDst: %d mType: %d write: %d login: %d unknown: %d onOff: "
        "%d temp: %d, mode: %d cP:%d uM:%d cTemp:%d acError:%d \n",
        ff.messageSource, ff.messageDest, ff.messageType, ff.writeBit,
        ff.loginBit, ff.unknownBit, ff.onOff, ff.temperature, ff.acMode,
        ff.controllerPresent, ff.updateMagic, ff.controllerTemp, ff.acError);
}
